@@ -52,6 +52,10 @@ The _MINIMUM_ installation is composed of:
 
 You can add modules
 
+Building wzdftpd with icc:
+Set CC to icc during configure:
+CC=icc ./configure [args]
+
 Building SVN version on FreeBSD:
 It's known that there are some troubles with aclocal on FreeBSD 5.2.1 (and 
 may be other versions). The solution is to run aclocal with 
