@@ -246,21 +246,21 @@ int chtbl_search(const CHTBL *htab, int (*match)(const void *, const void*), con
   return 1;
 }
 
-#ifdef WIN32
+#if defined(WIN32) || defined(__INTEL_COMPILER)
 int visual_sucks_and_does_not_support_local_functions_sortf(const void *d1, const void *d2)
 {
   const char * key1 = ((CHTBL_Elmnt*)d1)->key;
   const char * key2 = ((CHTBL_Elmnt*)d2)->key;
   return (strcmp)(key1,key2);
 }
-#endif /* WIN32 */
+#endif /* WIN32 || __INTEL_COMPILER */
 
 List * chtbl_extract(const CHTBL *htab, int (*match)(const void *, const void *), const void *arg, int (*sort)(const void *, const void *))
 {
   unsigned int i;
   List * return_list;
 
-#ifndef WIN32
+#if !defined(WIN32) && !defined(__INTEL_COMPILER)
   /* yes, that's a bit lame .. we define an internal function, dependant on the upper
    * level function's parameter, to compare the key (and not the CHTBL_Elmnt !).
    */
