@@ -1259,7 +1259,7 @@ out_err(LEVEL_HIGH,"char: %d [%c]\n", c, c);
         }
         sz64 = wzd_cache_getsize(file);
         if (sz64 > INT_MAX) {
-	      out_log(LEVEL_HIGH,"%s:%d can't allocate %" PRIu64 " bytes for a file, aborting\n",size);
+	      out_log(LEVEL_HIGH,"%s:%d can't allocate %" PRIu64 " bytes for a file, aborting\n",sz64);
 		  wzd_cache_close(file);
 		  cookie_ptr = NULL;
 		  cookie_length = 0;
